--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 /* header part start */
 .fruity-header {
-  background-color: var(--bg-clr2);
+  background-color: #F5F5F3;
+  padding: 25px 0px;
 }
 .menu {
   list-style-type: none;
@@ -12,7 +13,7 @@
 }
 .menu-item {
   float: left;
-  padding: 5px 25px;
+  padding: 5px 15px;
   font-weight: bold;
 }
 .menu-item:hover .sub-menu {
@@ -100,6 +101,18 @@
     z-index: 1;
   }
 }
+.header-icons{
+    background-color: var(--white-clr);
+    transition: 0.3s all ease-in-out;
+}
+.header-icons:hover{
+    cursor: pointer;
+    background-color: var(--main-clr);
+    color: var(--white-clr);
+}
+.menu-btnnn{
+    margin-left: -100px !important;
+}
 /* header part end */
 
 /* hero section start */
@@ -109,6 +122,8 @@
 }
 .active-slide{
     display: block;
+    /* top: -90px; */
+    /* z-index: -1; */
 }
 .image-wrap{
     width: 100%;
