Log in and Sign up completed

--- a/css/menu.css
+++ b/css/menu.css
@@ -166,6 +166,8 @@ video {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 66%;
   flex: 0 0 66%;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .header-item-right {
