--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@
   background-color: var(--white-clr);
   transition: 0.3s all ease-in-out;
   padding: 15px;
-  /* margin: 0.5px; */
 }
 .header-icons:hover {
   cursor: pointer;
@@ -305,6 +304,10 @@
 /* why chose us section end */
 
 /* footer part start */
+.footer-wrap {
+  margin-top: 100px;
+  background-color: var(--section-bg-clr);
+}
 .footer-menu {
   list-style-type: none;
 }
@@ -343,3 +346,23 @@
   position: absolute;
 }
 /* footer part end */
+
+/* comon banner */
+.common-banner {
+  background-image: url(../img/banner/banner-single-page.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: #071c1f;
+  /* background-blend-mode: darken; */
+  width: 100%;
+  height: 400px;
+}
+.bg-opacity {
+  width: 100%;
+  height: 100%;
+  background-color: #071c1f;
+  opacity: 0.9;
+}
+/* comon banner end */
